--- a/Theme/style.css
+++ b/Theme/style.css
@@ -969,3 +969,36 @@ img.size-full {
 .wp-caption { max-width: 97.5%; }
 
 
+/* =================================
+IMAGE TEXT WRAP IN POSTS AND PAGES
+===================================*/
+#page-template-wrapper article p img.alignright,
+img.alignright {
+	float:right;
+	margin:0 0 1em 1em;
+	padding:0;
+}
+#page-template-wrapper article p img.alignleft,
+img.alignleft {
+	float:left;
+	margin:0 1em 1em 0;
+	padding:0;
+}
+#page-template-wrapper article p img.aligncenter,
+img.aligncenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+.alignright {
+	float:right;
+}
+.alignleft {
+	float:left;
+}
+.aligncenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto
+}
+
