--- a/Theme/style.css
+++ b/Theme/style.css
@@ -486,9 +486,11 @@ HOME
 			filter: alpha(opacity=80);
 			z-index: 1;
 			}
-			#home-container article .inside img.right{
-				right: -150px;
-				}
+			#home-container article .inside img.hero-1{ left: -130px; top: 0;}
+			#home-container article .inside img.hero-2{ left: -30px; }
+			#home-container article .inside img.hero-3{}
+			#home-container article .inside img.hero-4{left: -95px;}
+			#home-container article .inside img.right{ right: -150px; }
 
 #home-intro-container{
 	max-width: 1008px;
@@ -537,7 +539,7 @@ HOME
 
 #home-intro-container .call-to-action{
 	margin-top: 3em;
-}
+	}
 	#home-intro-container .call-to-action a{
 		text-align: center;
 		display: block;
@@ -612,13 +614,26 @@ HOME
 				width: 100%;
 				max-height: none;
 				}
-				#home-container article .inside img.right{
-					right: 0px;
-					}
+				#home-container article .inside img.hero-1{ left: 0px; top: -200px;}
+				#home-container article .inside img.hero-2{ left: 0px; }
+				#home-container article .inside img.hero-3{}
+				#home-container article .inside img.hero-4{ left: 0px; }
+				#home-container article .inside img.right{ right: 0px; }
 	#home-container article .inside { max-height: 200px; }
 }
 @media screen and (max-width: 640px) {
 	#home-intro-container .call-to-action a{ font-size: 100%; }
+	#home-container article .inside img.hero-1{ left: 0px; top: -190px;}
+	#home-container article .inside img.hero-2{ left: 0px; }
+	#home-container article .inside img.hero-3{}
+	#home-container article .inside img.hero-4{ left: 0px; }
+}
+
+@media screen and (max-width: 510px) {
+	#home-container article .inside img.hero-1{ left: 0px; top: -100px;}
+	#home-container article .inside img.hero-2{ left: 0px; }
+	#home-container article .inside img.hero-3{}
+	#home-container article .inside img.hero-4{ left: 0px; }
 }
 
 
@@ -701,6 +716,7 @@ PAGE TEMPLATE
 	font-weight: 400;
 	font-size: 1.3em;
 	}
+	/*#page-template-wrapper article img,*/
 	#page-template-wrapper article p img{
 		max-width: 100%;
 		width: auto;
@@ -717,6 +733,23 @@ PAGE TEMPLATE
 #page-template-wrapper article .wp-caption{
 	padding: 2em 0;
 	}
+
+#page-template-wrapper article ul{
+	font-family: "futura-pt",sans-serif;
+	font-size: 1.3em;
+	list-style: disc;
+	padding-left: 1.1em;
+	}
+	#page-template-wrapper article ul li{
+		padding-top: 0.25em;
+		padding-bottom: 0.25em;
+		}
+#page-template-wrapper article table{
+	font-family: "futura-pt",sans-serif;
+	font-size: 1.3em;
+	padding-left: 1.1em;
+	}
+
 
 @media screen and (max-width: 768px) {
 	#page-template-wrapper article.no-p { padding: 0 1em; }
@@ -748,13 +781,6 @@ PAGE BUTTON TEMPLATE
 		position:relative;
 		top:1px;
 		}
-
-#page-template-wrapper article ul{
-	font-family: "futura-pt",sans-serif;
-	font-size: 1.125em;
-	list-style: disc;
-	padding-left: 1em;
-	}
 
 /* =================================
 OUR PEOPLE CUSTOM
@@ -898,6 +924,7 @@ FOOTER
 		font-style: normal;
 		height: 100%;
 		}
+	#footer-container nav div.menu ul:first-child{ margin-bottom: 0; }
 	#footer-container nav {padding-top: 1em;}
 	#footer-container nav div.menu{padding-left: 2em;}
 	#footer-container li.page_item_has_children{
