--- a/Theme/style.css
+++ b/Theme/style.css
@@ -810,6 +810,29 @@ PAGE TEMPLATE
 	padding-left: 1.1em;
 	}
 
+#page-template-wrapper article .arve-wrapper{margin:26px 0px;}
+
+body.page-id-910 #page-template-wrapper article h5{
+	font-size: 1.3em;
+	line-height: 1.5em;
+	font-weight: 300;
+	padding-top: 3em;
+	margin-top: 1em;
+	border-width: 1px 0 0 0;
+	border-style: solid;
+	border-color:#e5e5e5;
+	}
+
+body.page-id-910 #page-template-wrapper article h5:first-of-type {
+	padding-top: 0em;
+	border-width: 0px 0 0 0;
+	}
+
+body.page-id-910 #page-template-wrapper article h6{
+	text-align:left;	
+	font-weight: 600;
+	font-family: "futura-pt",sans-serif;
+	}
 
 @media screen and (max-width: 768px) {
 	#page-template-wrapper article.no-p { padding: 0 1em; }
@@ -1092,4 +1115,3 @@ img.aligncenter {
 	margin-left: auto;
 	margin-right: auto
 }
-
